# TOB

./: .gitignore  Chuck.hs  Date.hs  LICENSE  README.md  TOB.cabal
app/: Main.hs
docs/: Bot.html  Chuck.html  Date.html  TOB.haddock  Weather.html  doc-index.html  index.html  mini_Bot.html  mini_Weather.html
documentation/TOB/: Bot.html  Chuck.html  Date.html  Stats.html  index-frames.html  mini_Chuck.html  mini_Date.html  mini_Stats.html
src/: Bot.hs  Chuck.hs  Date.hs  Stats.hs  Weather.hs
test/: Spec.hs  StatsTest.hs
