
name:                TOB
version:             0.1.0.0
synopsis:            TOB - the best IRC bot
description:         This doc shows modules used in bot
homepage:            https://bitbucket.org/epsilon_BR/tob
license:             BSD3
license-file:        LICENSE
author:              Bartosz Radzyński @ Małgorzata Stachoń
maintainer:          radzynskib@gmail.com
copyright:           2016 Bartosz Radzyński
category:            Web
build-type:          Simple
extra-source-files:  .gitignore
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot, Stats, Weather, Chuck, Date
  build-depends:       base >= 4.7 && < 5, old-time, mtl, network, containers, aeson, bytestring, http-conduit, time
  default-language:    Haskell2010

executable TOB-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, TOB, old-time, mtl, network
  default-language:    Haskell2010

test-suite TOB-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             StatsTest.hs
  build-depends:       base, TOB,HUnit, QuickCheck, hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TOB
